--- a/chat/index.html
+++ b/chat/index.html
@@ -17,6 +17,8 @@
             var wordtoadd = document.getElementById("wordtoadd");
             var defstoadd = document.getElementById("defstoadd");
             var addword = document.getElementById("addword");
+            var updateword = document.getElementById("updateword");
+            var updatewordconfirm = document.getElementById("updatewordconfirm");
             var log = document.getElementById("log");
             var clearlogs = document.getElementById("clearlogs");
 
@@ -68,6 +70,22 @@
                     return false;
                 }
                 conn.send("addword=" + wordtoadd.value + "=" + defstoadd.value);
+                return false;
+            }
+
+            updateword.onclick = function (e) {
+                if (!conn) {
+                    return false;
+                }
+                conn.send("updateword=" + wordtoadd.value + "=" + defstoadd.value);
+                return false;
+            }
+
+            updatewordconfirm.onclick = function (e) {
+                if (!conn) {
+                    return false;
+                }
+                conn.send("updatewordconfirm=" + wordtoadd.value + "=" + defstoadd.value);
                 return false;
             }
 
@@ -145,7 +163,7 @@
                     </div>
                 </div>
                 <div class="flex w-full self-start justify-start">
-                    <div class="flex-col w-full self-start justify-start bg-sky-300 pt-3 px-6 pb-6">
+                    <div class="flex-col w-full self-start justify-start bg-sky-300 pt-3 pl-6 pb-6">
                         <div class="flex w-full">
                             <p>add word <span class="text-sm font-light text-gray-600">masquerade ,/n./@化妆;,/n./@伪装;,/n./@化妆舞会;</span></p>
                         </div>
@@ -153,6 +171,10 @@
                             <input type="text" id="wordtoadd" placeholder="word" class="w-1/4 outline outline-blue-500 self-center placeholder:font-light placeholder:text-sm"/>
                             <input type="text" id="defstoadd" placeholder=",/n./@化妆;,/n./@伪装;,/n./@化妆舞会;" class="w-1/2 outline outline-blue-500 self-center placeholder:font-light placeholder:text-sm"/>
                             <button id="addword" class="text-white bg-blue-800 hover:bg-blue-500 px-6 py-1 rounded self-center ml-3">Add</button>
+                        </div>
+                        <div class="flex w-full self-start justify-start mt-2">
+                            <button id="updateword" class="text-white bg-blue-800 hover:bg-blue-500 px-6 py-1 rounded self-center">Update</button>
+                            <button id="updatewordconfirm" class="text-white bg-blue-800 hover:bg-blue-500 px-6 py-1 rounded self-center ml-3">Update Confirm</button>
                         </div>
                     </div>
                 </div>
