migrate legacy WordLabGo to Chat

--- a/chat/index.html
+++ b/chat/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>Chat Example</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Word Lab Chat</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script defer src="https://unpkg.com/alpinejs@3.10.5/dist/cdn.min.js"></script>
     <script type="text/javascript">
         window.onload = function () {
             var conn;
@@ -287,6 +288,7 @@
                         <div class="flex w-full self-start justify-start">
                             <button id="clearlogs" class="text-white bg-blue-800 hover:bg-blue-500 px-6 py-1 rounded self-center">Clear Logs</button>
                             <button id="clearinputs" class="text-white bg-blue-800 hover:bg-blue-500 px-6 py-1 rounded self-center ml-3">Clear Inputs</button>
+                            <a href="/legacy" class="text-white bg-blue-800 hover:bg-blue-500 px-6 py-1 rounded self-center ml-3">Legacy</a>
                         </div>
                     </div>
                 </div>
